[gd_scene load_steps=10 format=3 uid="uid://8uqlohigjsfq"]

[ext_resource type="Script" uid="uid://d4e5601slitgy" path="res://scenes/card_carousel.gd" id="1_ok7b7"]
[ext_resource type="Script" uid="uid://b5qe5ftfbq8er" path="res://cards/abstract_card/card_resources/abstract_card_details.gd" id="2_p5m3y"]

[sub_resource type="Resource" id="Resource_ok7b7"]
script = ExtResource("2_p5m3y")
card_category = null
card_type = -1
actions_to_cooldown = 0
usage_limit = -1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Resource" id="Resource_svm4r"]
script = ExtResource("2_p5m3y")
card_category = null
card_type = -1
actions_to_cooldown = 0
usage_limit = -1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Resource" id="Resource_d5yrc"]
script = ExtResource("2_p5m3y")
card_category = null
card_type = -1
actions_to_cooldown = 0
usage_limit = -1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Curve2D" id="Curve2D_ok7b7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 96, 132.247, 0, 0, 0, 0, 120, 144.27, 0, 0, 0, 0, 96, 152.285, 0, 0, 0, 0, 72, 144.27, 0, 0, 0, 0, 96, 132.247)
}
point_count = 5

[sub_resource type="Animation" id="Animation_svm4r"]
resource_name = "toggle_carousel"
length = 0.3
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CarouselPath:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, 44), Vector2(0, -12)]
}

[sub_resource type="Animation" id="Animation_d5yrc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CarouselPath:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 44)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5yrc"]
_data = {
&"RESET": SubResource("Animation_d5yrc"),
&"toggle_carousel": SubResource("Animation_svm4r")
}

[node name="CardCarousel" type="Node2D"]
script = ExtResource("1_ok7b7")
card_actions = Array[ExtResource("2_p5m3y")]([SubResource("Resource_ok7b7"), SubResource("Resource_svm4r"), SubResource("Resource_d5yrc")])
cycle_speed_base = 0.1

[node name="CycleTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3

[node name="CarouselPath" type="Path2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 44)
scale = Vector2(1, 0.998131)
curve = SubResource("Curve2D_ok7b7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_d5yrc")
}
